--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "dev": "json-server --watch database/db.json"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
