--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dev": "json-server --watch database/db.json"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "bootstrap": "^5.1.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "emailjs-com": "^3.2.0",
     "vue": "^3.2.19",
     "vue-router": "^4.0.0-0"
   },
